force-app/main/default/objects/bpats__Job__c/fields/Billing_Profile__c.field-meta.xml
<CustomField>
    <fullName>Billing_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Profile</label>
    <referenceTo>Billing_Profile__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>