force-app/main/default/objects/bpats__Job__c/fields/bpats__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Account_Name__c</fullName>
    <description>Needed for TextKernel lightning component</description>
    <formula>bpats__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>