force-app/main/default/objects/bpats__Job__c/fields/bpats__Applicants_View__c.field-meta.xml
<CustomField>
    <fullName>bpats__Applicants_View__c</fullName>
    <label>Applicants View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kanban View</fullName>
                <default>true</default>
                <label>Kanban View</label>
            </value>
            <value>
                <fullName>List View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>