force-app/main/default/objects/bpats__Job__c/fields/bpats__ATS_Template__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATS Template</label>
    <referenceTo>bpats__ATS_Template__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>