force-app/main/default/objects/bpats__Job__c/fields/bpats__Benefits_Perks__c.field-meta.xml
<CustomField>
    <fullName>bpats__Benefits_Perks__c</fullName>
    <label>Benefits &amp; Perks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>