force-app/main/default/objects/bpats__Job__c/fields/bpats__Bonus__c.field-meta.xml
<CustomField>
    <fullName>bpats__Bonus__c</fullName>
    <label>Bonus</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>