force-app/main/default/objects/bpats__Job__c/fields/bpats__Conversion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>bpats__Conversion_Percentage__c</fullName>
    <label>Conversion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>