force-app/main/default/objects/bpats__Job__c/fields/bpats__Delivery_Lead__c.field-meta.xml
<CustomField>
    <fullName>bpats__Delivery_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>