force-app/main/default/objects/bpats__Job__c/fields/bpats__End_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>