force-app/main/default/objects/bpats__Job__c/fields/bpats__Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>bpats__Estimated_Revenue__c</fullName>
    <label>Estimated Revenue</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>