force-app/main/default/objects/bpats__Job__c/fields/bpats__Experience__c.field-meta.xml
<CustomField>
    <fullName>bpats__Experience__c</fullName>
    <label>Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>