force-app/main/default/objects/bpats__Job__c/fields/bpats__Fields_to_Display_on_Cards__c.field-meta.xml
<CustomField>
    <fullName>bpats__Fields_to_Display_on_Cards__c</fullName>
    <inlineHelpText>Contains fields separated by semi-colon(;) whose values are to be displayed on card in ATS Kanban View.</inlineHelpText>
    <label>Fields to Display on Cards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>