force-app/main/default/objects/bpats__Job__c/fields/bpats__Fixed_Fee__c.field-meta.xml
<CustomField>
    <fullName>bpats__Fixed_Fee__c</fullName>
    <label>Fixed Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>