force-app/main/default/objects/bpats__Job__c/fields/bpats__Guarantee_Period_Weeks__c.field-meta.xml
<CustomField>
    <fullName>bpats__Guarantee_Period_Weeks__c</fullName>
    <label>Guarantee Period (Weeks)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>