force-app/main/default/objects/bpats__Job__c/fields/bpats__Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>bpats__Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs (Hiring Manager)</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>