force-app/main/default/objects/bpats__Job__c/fields/bpats__Hiring_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>bpats__Hiring_Manager_Email__c</fullName>
    <formula>bpats__Hiring_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiring Manager&apos;s Email</label>
    <type>Text</type>
</CustomField>