force-app/main/default/objects/bpats__Job__c/fields/bpats__Hiring_Multiple_Candidates__c.field-meta.xml
<CustomField>
    <fullName>bpats__Hiring_Multiple_Candidates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hiring Multiple Candidates</label>
    <type>Checkbox</type>
</CustomField>