force-app/main/default/objects/bpats__Job__c/fields/bpats__Index__c.field-meta.xml
<CustomField>
    <fullName>bpats__Index__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Index</label>
    <type>Checkbox</type>
</CustomField>