force-app/main/default/objects/bpats__Job__c/fields/bpats__Is_Synced__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synced</label>
    <type>Checkbox</type>
</CustomField>