force-app/main/default/objects/bpats__Job__c/fields/bpats__Job_Board_Field_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Board_Field_Set_API_Name__c</fullName>
    <label>Job Board Field Set API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>