force-app/main/default/objects/bpats__Job__c/fields/bpats__Job_Description__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Description__c</fullName>
    <label>External Job Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>