force-app/main/default/objects/bpats__Job__c/fields/bpats__Job_Number__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Job Number</label>
    <type>AutoNumber</type>
</CustomField>