force-app/main/default/objects/bpats__Job__c/fields/bpats__Location__c.field-meta.xml
<CustomField>
    <fullName>bpats__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>