force-app/main/default/objects/bpats__Job__c/fields/bpats__Number_Of_Mass_Actions__c.field-meta.xml
<CustomField>
    <fullName>bpats__Number_Of_Mass_Actions__c</fullName>
    <label>Number Of Mass Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>