force-app/main/default/objects/bpats__Job__c/fields/bpats__Number_of_Openings__c.field-meta.xml
<CustomField>
    <fullName>bpats__Number_of_Openings__c</fullName>
    <label>Number of Openings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>