force-app/main/default/objects/bpats__Job__c/fields/bpats__Openings_Filled__c.field-meta.xml
<CustomField>
    <fullName>bpats__Openings_Filled__c</fullName>
    <label>Openings Filled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>