force-app/main/default/objects/bpats__Job__c/fields/bpats__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>bpats__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>