force-app/main/default/objects/bpats__Job__c/fields/bpats__Pay_Range__c.field-meta.xml
<CustomField>
    <fullName>bpats__Pay_Range__c</fullName>
    <label>Pay Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>