force-app/main/default/objects/bpats__Job__c/fields/bpats__Placement_Fee__c.field-meta.xml
<CustomField>
    <fullName>bpats__Placement_Fee__c</fullName>
    <label>Placement Fee %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>