force-app/main/default/objects/bpats__Job__c/fields/bpats__Post_Externally__c.field-meta.xml
<CustomField>
    <fullName>bpats__Post_Externally__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to post the job to company website</description>
    <label>Post Externally</label>
    <type>Checkbox</type>
</CustomField>