force-app/main/default/objects/bpats__Job__c/fields/bpats__Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Posted_Date__c</fullName>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>