force-app/main/default/objects/bpats__Job__c/fields/bpats__Related_Lists_to_Display__c.field-meta.xml
<CustomField>
    <fullName>bpats__Related_Lists_to_Display__c</fullName>
    <description>Contains related lists separated by semi-colon(;) which are to be displayed on the split view.</description>
    <label>Related Lists to Display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>