force-app/main/default/objects/bpats__Job__c/fields/bpats__Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>bpats__Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>