force-app/main/default/objects/bpats__Job__c/fields/bpats__Shift__c.field-meta.xml
<CustomField>
    <fullName>bpats__Shift__c</fullName>
    <label>Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning Shift</fullName>
            </value>
            <value>
                <fullName>Evening Shift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>