force-app/main/default/objects/bpats__Job__c/fields/bpats__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>bpats__Short_Description__c</fullName>
    <label>Short Description</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>