force-app/main/default/objects/bpats__Job__c/fields/bpats__Show_ATS_Stages__c.field-meta.xml
<CustomField>
    <fullName>bpats__Show_ATS_Stages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked, show the ATS Stage Related List</description>
    <label>Show ATS Stages</label>
    <type>Checkbox</type>
</CustomField>