force-app/main/default/objects/bpats__Job__c/fields/bpats__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>