force-app/main/default/objects/bpats__Job__c/fields/bpats__Status__c.field-meta.xml
<CustomField>
    <fullName>bpats__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bpats__Job_Status</valueSetName>
    </valueSet>
</CustomField>