force-app/main/default/objects/bpats__Job__c/fields/bpats__Tags__c.field-meta.xml
<CustomField>
    <fullName>bpats__Tags__c</fullName>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>