force-app/main/default/objects/bpats__Job__c/fields/bpats__Today_Goal__c.field-meta.xml
<CustomField>
    <fullName>bpats__Today_Goal__c</fullName>
    <label>Today’s Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>