force-app/main/default/objects/bpats__Job__c/fields/bpats__Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bpats__Job_Type</valueSetName>
    </valueSet>
</CustomField>