force-app/main/default/objects/bpats__Job__c/fields/bpats__Urgent_Hiring__c.field-meta.xml
<CustomField>
    <fullName>bpats__Urgent_Hiring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent Hiring</label>
    <type>Checkbox</type>
</CustomField>