force-app/main/default/objects/bpats__Job__c/fields/Conversion_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Fee_Amount__c</fullName>
    <formula>bpats__Salary__c *  bpats__Conversion_Percentage__c</formula>
    <label>Conversion Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>