force-app/main/default/objects/bpats__Job__c/fields/Field_Office_Position__c.field-meta.xml
<CustomField>
    <fullName>Field_Office_Position__c</fullName>
    <inlineHelpText>Is the position primarily one in the field that will require a skill test, or in an office/admin setting?</inlineHelpText>
    <label>Field/Office Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AC_Field_Office_Position</valueSetName>
    </valueSet>
</CustomField>