force-app/main/default/objects/bpats__Job__c/fields/Placement_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Placement_Fee_Amount__c</fullName>
    <formula>bpats__Salary__c *  bpats__Placement_Fee__c</formula>
    <label>Placement Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>