force-app/main/default/objects/bpats__Job__c/validationRules/Prevent_Inactive_Billing_Profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Inactive_Billing_Profile</fullName>
    <active>true</active>
    <description>Prevents selection of Inactive Billing Profiles on Job records</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Billing_Profile__c)),
  TEXT(Billing_Profile__r.Status__c) = &quot;Inactive&quot;
)</errorConditionFormula>
    <errorDisplayField>Billing_Profile__c</errorDisplayField>
    <errorMessage>You cannot select an Inactive Billing Profile for new Jobs. Please select an Active Billing Profile or reactivate the desired profile.</errorMessage>
</ValidationRule>