force-app/main/default/objects/bpats__Job__c/validationRules/Require_Active_Billing_Profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Active_Billing_Profile</fullName>
    <active>true</active>
    <description>Requires at least one Active Billing Profile to exist on the Company before creating a Job</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(bpats__Account__c)),
  ISBLANK(Billing_Profile__c)
)</errorConditionFormula>
    <errorDisplayField>Billing_Profile__c</errorDisplayField>
    <errorMessage>You must have at least one Active Billing Profile on the Company record before creating a Job. Please create an Active Billing Profile first.</errorMessage>
</ValidationRule>