force-app/main/default/objects/bpats__Job__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__Job_Title__c</columns>
    <columns>bpats__Index__c</columns>
    <columns>bpats__Account__c</columns>
    <columns>bpats__ATS_Template__c</columns>
    <columns>bpats__Type__c</columns>
    <columns>bpats__Start_Date__c</columns>
    <columns>bpats__End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>